<resources>
    <string name="app_name">Notice Board</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_more_text">Load more results</string>
    <string name="title_section1">Offers</string>
    <string name="title_section2">Bookmarks</string>
    <string name="title_section3">My offers</string>
    <string name="error_rest">Error while retrieving informations. Please try again.</string>
    <string name="btn_add_notice">Add new rent offer</string>
    <string name="title_activity_search">Search</string>
    <string name="action_search">Search</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="radius">Radius</string>
    <string name="size">size</string>
    <string name="price">price</string>
    <string name="tags">Tags</string>
    <string name="telephone_number">Telephone number</string>
    <string name="email">Email</string>
    <string name="created_on">Created on</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="inappropriate_count">Inappropriate count</string>
    <string name="open_gallery">Open gallery</string>
    <string-array name="sort_order">
        <item>Newest</item>
        <item>Oldest</item>
        <item>Cheaper</item>
        <item>More expensive</item>
        <item>Smaller</item>
        <item>Bigger</item>
</string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_show_notice">ShowNoticeActivity</string>


    <!-- picasso -->
    <string name="hide">HIDE</string>
    <string name="more">MORE</string>
    <string name="sample_widget">Picasso Sample Widget</string>
    <string name="sample_notification">Picasso Sample Notification</string>
    <string name="select_picture">Select Picture</string>
  <string name="disk_cache_description">On Ice Cream Sandwich and above, a disk cache is
    automatically used so that subsequent requests for the same URL do not re-download the
    image.\n\nTo enable this functionality on pre-ICS use a standalone HTTP client with caching such
    as OkHttp.
  </string>
    <string name="title_activity_gallery_grid_view">Gallery</string>
    <string name="add_to_bookmark">Add to bookmark</string>
    <string name="flag_as_inadequate">Flag as inadequate</string>
    <string name="unfav">Remove from bookmarks</string>
    <string name="delete_notice">Delete notice</string>
    <string name="unflag_as_inadequate">Unflag as inadequate</string>
    <string name="upload_pics">Upload pics</string>
    <string name="complete_address">Complete address</string>
    <string name="update">Update</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="upload_pics_b">Upload pics</string>

    <string name="network_error">An error occurred while trying to connect to the remote server. Please, check your Internet connection then try again.</string>
    <string name="title_show_notice_view">Show notice</string>
    <string name="title_edit_notice_view">Form for notice</string>
    <string name="edit">Edit</string>

    <string name="notice_validation_failed">Insertion of this notice failed. Please, check you have filled all the required field in the form.</string>
    <string name="error_field_required">This field is required</string>
    <string name="size_undef">mq undef</string>
    <string name="price_undef">€ undef</string>
    <string name="fav_ok">Added to Favourite</string>
    <string name="unfav_ok">Removed from Favourite</string>
    <string name="rem_in_ok">Is Adequate</string>
    <string name="add_in_ok">Is Inadequate</string>
    
    <string name="no_tags">No tags for this notice</string>
    <string name="confirm">Confirm</string>
    <string name="delete_notice_message">Delete the notice definetly?</string>
</resources>
