<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <RelativeLayout
        android:id="@+id/upload_l"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:visibility="visible"
        >

        <com.software.shell.fab.ActionButton
            android:id="@+id/upload_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:visibility="visible"
            fab:button_color="@color/orange_polito"
            fab:button_colorPressed="@color/fab_material_orange_900"
            fab:image="@drawable/ic_action_image_upload"
            fab:image_size="40dp"
            fab:type="BIG"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_centerHorizontal="true"/>

        <ProgressBar
            android:id="@+id/upload_pb"
            style="@android:style/Widget.ProgressBar.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_pics"

            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/gallery_l"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_margin"
        android:layout_marginLeft="@dimen/side_margin"
        android:layout_marginRight="@dimen/side_margin"
        android:visibility="gone"
        >

        <com.software.shell.fab.ActionButton
            android:id="@+id/gallery_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:visibility="visible"
            fab:button_color="@color/orange_polito"
            fab:button_colorPressed="@color/fab_material_orange_900"
            fab:image="@drawable/ic_action_gallery"
            fab:image_size="40dp"
            fab:type="BIG"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/open_gallery"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="false"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center_horizontal"/>

    </RelativeLayout>
</LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/medium_gray"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:orientation="horizontal">

            <com.software.shell.fab.ActionButton
                android:id="@+id/bookmark_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="top|left"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                fab:button_color="@color/orange_polito"
                fab:button_colorPressed="@color/fab_material_orange_900"
                fab:image="@drawable/abc_btn_rating_star_off_mtrl_alpha"
                fab:image_size="32dp"/>

            <com.software.shell.fab.ActionButton
                android:id="@+id/inadequate_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="top|left"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                fab:button_color="@color/orange_polito"
                fab:button_colorPressed="@color/fab_material_orange_900"
                fab:image="@drawable/ic_action_deny"
                fab:image_size="32dp"/>


            <com.software.shell.fab.ActionButton
                android:id="@+id/edit_b"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="top|left"
                android:layout_marginBottom="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                fab:button_color="@color/orange_polito"
                fab:button_colorPressed="@color/fab_material_orange_900"
                fab:image="@drawable/ic_action_edit"
                fab:image_size="32dp"
                android:visibility="gone"
                />



        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/medium_gray"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginTop="@dimen/vertical_margin"
            android:orientation="horizontal">


            <Button
                android:id="@+id/size_b"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="@dimen/side_margin"
                android:layout_weight="5"
                android:clickable="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#fff"
                />

            <Button
                android:id="@+id/price_b"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="5"
                android:clickable="false"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textColor="#fff"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/medium_gray"/>

        <LinearLayout
            style="@style/ProfileItem">

            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/location"/>

            <TextView
                android:id="@+id/location_tv"
                style="@style/ProfileItemText"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/medium_gray"/>

        <LinearLayout
            style="@style/ProfileItem">

            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/title"/>

            <TextView
                android:id="@+id/title_tv"
                style="@style/ProfileItemText"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/medium_gray"/>

        <LinearLayout
            style="@style/ProfileItem">

            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/description"/>

            <TextView
                android:id="@+id/description_tv"
                style="@style/ProfileItemText"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/medium_gray"/>

        <LinearLayout
            style="@style/ProfileItem">

            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/created_on"/>

            <TextView
                android:id="@+id/created_on_tv"
                style="@style/ProfileItemText"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/medium_gray"/>

        <LinearLayout
            style="@style/ProfileItem">

            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/email"/>

            <TextView
                android:id="@+id/email_tv"
                style="@style/ProfileItemText"
                android:autoLink="email"
                android:textColorLink="@color/blue_sky"
                />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/medium_gray"/>

        <LinearLayout
            style="@style/ProfileItem">

            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/telephone_number"/>

            <TextView
                android:id="@+id/telephone_number_tv"
                style="@style/ProfileItemText"
                android:autoLink="phone"
                android:textColorLink="@color/blue_sky"
                />
        </LinearLayout>


        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/medium_gray"/>

        <LinearLayout
            style="@style/ProfileItem">

            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/tags"/>

            <TextView
                android:id="@+id/tags_tv"
                style="@style/ProfileItemText"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/medium_gray"/>

        <LinearLayout
            style="@style/ProfileItem">

            <TextView
                style="@style/ProfileItemLabel"
                android:text="@string/inappropriate_count"/>

            <TextView
                android:id="@+id/inappropriate_count_tv"
                style="@style/ProfileItemText"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>